CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

9 November 2007
+ Added sanity check to scaleImage. If width and height of image is
  less than the resize only copy if the source and destination
  directories are different.

7 November 2007
+ Fixed makeThumbnail function. Works as intended again.
+ Added testDate function to Form
+ Added match settings to dateSelect function.
+ Updated Forms documentation with dateSelect information.
+ Fixed bad css in default theme.

5 November 2007
+ Added getPostedDate. Returns unix time from last posted dateSelect.

1 November 2007
+ Added new function, dateSelect. Works sort of like the old dateForm.
+ Changed incorrect detail in Demographics document.

30 October 2007
+ Fixed: Form wasn't properly creating id tags on array elements.
+ DBPager: initialize function now has optional parameter that delays
           the row loading.
+ DBPager: Error prevention added to getPageRows function.
+ Mail: added HTML email capabilities.


29 October 2007
+ Moved permissions updates from save to savePermissions function. Key
  was removing permissions after each successful save.

25 October 2007
+ Added default 'No label' to open_window if one is not entered.
+ Added nextPage function to Batch. Automatically adds the meta tag
  forward.
+ Added graph padding to total width of graph.
+ Added open_window type information in example.
+ Needed in update: Core needs to copy batch graph template and graphic

18 October 2007
+ Added loadClass information to Database.txt
+ Updated Image_Manager documentation.

16 October 2007
+ Added Eloi George's patch #1814159 to DBPager.php.
+ Added area tag to breaker function in Text class.

12 October 2007
+ Form.php - added function addRadioAssoc, allows you to send an
  associative array to create a set of radio buttons. The array keys
  are the input values and the array values are the labels. 